# lidardrone

./: README.md  ctrl.txt  ego.txt  lidar_to_mavros.sh  offb.txt  rviz.sh
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/pkgconfig/: bspline_opt.pc  cam.pc  catkin_simple.pc  cmake_utils.pc  controller.pc  decomp_ros_msgs.pc  decomp_ros_utils.pc  drone_detect.pc  ego_planner.pc  msg.pc  offb_bag.pc  path_searching.pc  plan_env.pc  pose_utils.pc  quadrotor_msgs.pc  rosmsg_tcp_bridge.pc  rviz_plugins.pc  traj_utils.pc  uav_utils.pc
devel/share/bspline_opt/cmake/: bspline_optConfig.cmake
devel/share/cam/cmake/: camConfig.cmake
devel/share/catkin_simple/cmake/: catkin_simple-extras.cmake  catkin_simpleConfig.cmake
devel/share/cmake_utils/cmake/: cmake_utilsConfig.cmake
devel/share/controller/cmake/: controllerConfig.cmake
devel/share/decomp_ros_msgs/cmake/: decomp_ros_msgs-msg-paths.cmake  decomp_ros_msgsConfig.cmake
devel/share/decomp_ros_utils/cmake/: decomp_ros_utilsConfig.cmake
devel/share/drone_detect/cmake/: drone_detectConfig.cmake
devel/share/ego_planner/cmake/: ego_plannerConfig.cmake
devel/share/msg/cmake/: msg-msg-extras.cmake  msg-msg-paths.cmake  msgConfig.cmake
src/: lidardrone.rviz
src/cam/: CMakeLists.txt  package.xml
src/cam/scripts/: aruco_det.py  aruco_det_copy11111.py  aruco_img.py  aruco_img_multi.py  aruco_py.py  cam_target_distpub.py  camera_error_publisher.py
src/cam/scripts/camera_cali/: cam_cali.py  cam_cap.py  distanceOutput_test.py  test_hsvselect.py  相机内参矩阵.txt
src/cam/src/: aruco_detect.cpp
src/controller/: CMakeLists.txt
src/controller/launch/: lidardrone.rviz  outdoor_exp.launch  rviz.launch  wypts_ctrl.launch
src/controller/src/: _test.cpp  a_test.cpp  cxr_egoctrl_v1.cpp  offb_NAV.cpp
src/livox_ros_driver2/config/: HAP_config.json  mixed_HAP_MID360_config.json
src/msg/: CMakeLists.txt
src/msg/msg/: ArucoMarker.msg  ArucoMarkerArray.msg  NAV_WYPT_MODE.msg  NAV_WYPT_TYPE_SWITCH.msg
src/offb_bag/: CMakeLists.txt  package.xml
src/offb_bag/src/: offb_RC.cpp
(+27 files in other folders)
