<?xml version="1.0"?>
<package format="2">
  <name>cam</name>
  <version>0.0.0</version>
  <description>Publishes camera displacement errors using color detection</description>

  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <build_depend>opencv2</build_depend>
  <exec_depend>opencv2</exec_depend>
  <build_depend>eigen</build_depend>
  <exec_depend>eigen</exec_depend>
  
  <export>
  </export>
</package>
